--- a/ios/TheIrishCowboy/Info.plist
+++ b/ios/TheIrishCowboy/Info.plist
@@ -53,6 +53,8 @@
 		<string>CormorantGaramond-Medium.ttf</string>
 		<string>CormorantGaramond-Regular.ttf</string>
 		<string>CormorantGaramond-SemiBold.ttf</string>
+		<string>QuattrocentoSans-Bold.ttf</string>
+		<string>QuattrocentoSans-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
