--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,6 +27,8 @@ end
 
 target 'TheIrishCowboy' do
   config = use_native_modules!
+  rn_maps_path = '../node_modules/react-native-maps'
+  pod 'react-native-google-maps', :path => rn_maps_path
 
   use_react_native!(
     :path => config[:reactNativePath],
