--- a/ios/TheIrishCowboy/Info.plist
+++ b/ios/TheIrishCowboy/Info.plist
@@ -32,7 +32,7 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+  <string>The Irish Cowboy requires access to your location to provide personalized recommendations and improve user experience.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>CormorantGaramond-Bold.ttf</string>
