--- a/package.json
+++ b/package.json
@@ -14,13 +14,25 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-actions-sheet": "^0.9.3",
+    "react-native-animated-dots-carousel": "^1.0.2",
+    "react-native-date-picker": "^4.4.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-maps": "^1.11.3",
+    "react-native-reanimated": "^3.8.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.1.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-video": "^5.2.1",
+    "remove": "^0.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -32,6 +44,7 @@
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
+    "@types/react-native-video": "^5.0.20",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
