--- a/ios/TheIrishCowboy.xcodeproj/xcshareddata/xcschemes/TheIrishCowboy.xcscheme
+++ b/ios/TheIrishCowboy.xcodeproj/xcshareddata/xcschemes/TheIrishCowboy.xcscheme
@@ -60,6 +60,12 @@
             ReferencedContainer = "container:TheIrishCowboy.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "RNFBMessaging"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
