--- a/ios/TheIrishCowboy/Info.plist
+++ b/ios/TheIrishCowboy/Info.plist
@@ -32,7 +32,7 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-  <string>The Irish Cowboy requires access to your location to provide personalized recommendations and improve user experience.</string>
+	<string>The Irish Cowboy requires access to your location to provide personalized recommendations and improve user experience.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>CormorantGaramond-Bold.ttf</string>
@@ -60,6 +60,11 @@
 		<string>Octicons.ttf</string>
 		<string>Zocial.ttf</string>
 		<string>Fontisto.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
