--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^19.1.2",
+    "@react-native-firebase/messaging": "^19.1.2",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
@@ -24,6 +27,7 @@
     "react-native-gesture-handler": "^2.15.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-maps": "^1.11.3",
+    "react-native-mmkv-storage": "^0.9.1",
     "react-native-reanimated": "^3.8.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.9.0",
@@ -32,6 +36,7 @@
     "react-native-svg": "^15.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-video": "^5.2.1",
+    "react-native-webview": "^13.10.2",
     "remove": "^0.1.5"
   },
   "devDependencies": {
